Hopefully fixed the look on iOS and Andoid

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+html{
+	text-align: center;
+}
 body {
-	text-align:center
+	text-align: center;
 }
 p{
-	text-align:center
+	text-align: center;
 }
